--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "comic-news",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "6.4.1",
+    "node": "10.6.0"
+  },
   "dependencies": {
     "@reach/router": "^1.2.1",
     "axios": "^0.18.0",
